--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -6,6 +6,7 @@ body,
   height: 100%;
   margin: 0;
   padding: 0;
+  --at-apply: 'max-w-7xl mx-auto bg-l1';
 }
 
 #nprogress {
@@ -13,7 +14,7 @@ body,
 }
 
 #nprogress .bar {
-  background: rgb(13,148,136);
+  background: '#FDFDFD';
   opacity: 0.75;
   position: fixed;
   z-index: 1031;
