--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -6,7 +6,7 @@ body,
   height: 100%;
   margin: 0;
   padding: 0;
-  --at-apply: 'max-w-7xl mx-auto bg-l1';
+  --at-apply: 'max-w-7xl mx-auto bg-sandLight';
 }
 
 #nprogress {
